--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -320,7 +320,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_typetype_input_KeyCodeViewScene.cpp" />
     <ClCompile Include="..\Classes\input_practice_KeyConfigScene.cpp" />
     <ClCompile Include="..\Classes\Research_Input_ConfigedKeysTestScene.cpp" />
-    <ClCompile Include="..\Classes\Research_Setting.cpp" />
+    <ClCompile Include="..\Classes\input_practice_Setting.cpp" />
     <ClCompile Include="..\Classes\PlayGroundScene.cpp" />
     <ClCompile Include="..\Classes\step_pathfinder_RootScene.cpp" />
     <ClCompile Include="..\Classes\step_pathfinder_tool_TerrainSaveHelper.cpp" />
@@ -551,7 +551,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_typetype_input_KeyCodeViewScene.h" />
     <ClInclude Include="..\Classes\input_practice_KeyConfigScene.h" />
     <ClInclude Include="..\Classes\Research_Input_ConfigedKeysTestScene.h" />
-    <ClInclude Include="..\Classes\Research_Setting.h" />
+    <ClInclude Include="..\Classes\input_practice_Setting.h" />
     <ClInclude Include="..\Classes\PlayGroundScene.h" />
     <ClInclude Include="..\Classes\step_pathfinder_RootScene.h" />
     <ClInclude Include="..\Classes\step_pathfinder_tool_TerrainSaveHelper.h" />
