--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -198,6 +198,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_flipflip_action_BasicScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_CardViewNode.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_Constant.cpp" />
+    <ClCompile Include="..\Classes\step_flipflip_game_StageViewNode.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_test_CardViewScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_test_StageViewScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_opacity_BasicScene.cpp" />
@@ -422,6 +423,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_flipflip_action_BasicScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_CardViewNode.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_Constant.h" />
+    <ClInclude Include="..\Classes\step_flipflip_game_StageViewNode.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_test_CardViewScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_test_StageViewScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_opacity_BasicScene.h" />
