--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -864,6 +864,9 @@
     <ClCompile Include="..\Classes\tool_practice_RootScene.cpp">
       <Filter>src\scene\tool_practice</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_flipflip_game_StageViewNode.cpp">
+      <Filter>src\scene\step_02_flipflip\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1555,6 +1558,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\tool_practice_RootScene.h">
       <Filter>src\scene\tool_practice</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_flipflip_game_StageViewNode.h">
+      <Filter>src\scene\step_02_flipflip\game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
