add class : step_flipflip - game - CardSelectorNode

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -867,6 +867,12 @@
     <ClCompile Include="..\Classes\step_flipflip_game_StageViewNode.cpp">
       <Filter>src\scene\step_02_flipflip\game</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_flipflip_game_test_CardSelectorNodeScene.cpp">
+      <Filter>src\scene\step_02_flipflip\game_test</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\step_flipflip_game_CardSelectorNode.cpp">
+      <Filter>src\scene\step_02_flipflip\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1560,6 +1566,12 @@
       <Filter>src\scene\tool_practice</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_flipflip_game_StageViewNode.h">
+      <Filter>src\scene\step_02_flipflip\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_flipflip_game_test_CardSelectorNodeScene.h">
+      <Filter>src\scene\step_02_flipflip\game_test</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_flipflip_game_CardSelectorNode.h">
       <Filter>src\scene\step_02_flipflip\game</Filter>
     </ClInclude>
   </ItemGroup>
