--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -196,9 +196,11 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_defender_tool_test_TileSheetNodeScene.cpp" />
     <ClCompile Include="..\Classes\step_defender_tool_TileSheetNode.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_action_BasicScene.cpp" />
+    <ClCompile Include="..\Classes\step_flipflip_game_CardSelectorNode.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_CardViewNode.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_Constant.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_StageViewNode.cpp" />
+    <ClCompile Include="..\Classes\step_flipflip_game_test_CardSelectorNodeScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_test_CardViewScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_test_StageViewScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_opacity_BasicScene.cpp" />
@@ -421,9 +423,11 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_defender_tool_test_TileSheetNodeScene.h" />
     <ClInclude Include="..\Classes\step_defender_tool_TileSheetNode.h" />
     <ClInclude Include="..\Classes\step_flipflip_action_BasicScene.h" />
+    <ClInclude Include="..\Classes\step_flipflip_game_CardSelectorNode.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_CardViewNode.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_Constant.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_StageViewNode.h" />
+    <ClInclude Include="..\Classes\step_flipflip_game_test_CardSelectorNodeScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_test_CardViewScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_test_StageViewScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_opacity_BasicScene.h" />
