--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -202,6 +202,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_flipflip_game_StageViewNode.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_test_CardSelectorNodeScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_test_CardViewScene.cpp" />
+    <ClCompile Include="..\Classes\step_flipflip_game_test_SelectAndFlipScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_test_StageViewScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_opacity_BasicScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_RootScene.cpp" />
@@ -429,6 +430,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_flipflip_game_StageViewNode.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_test_CardSelectorNodeScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_test_CardViewScene.h" />
+    <ClInclude Include="..\Classes\step_flipflip_game_test_SelectAndFlipScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_test_StageViewScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_opacity_BasicScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_RootScene.h" />
