--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -876,6 +876,9 @@
     <ClCompile Include="..\Classes\step_flipflip_game_test_SelectAndFlipScene.cpp">
       <Filter>src\scene\step_02_flipflip\game_test</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_flipflip_game_StageData.cpp">
+      <Filter>src\scene\step_02_flipflip\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1579,6 +1582,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step_flipflip_game_test_SelectAndFlipScene.h">
       <Filter>src\scene\step_02_flipflip\game_test</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_flipflip_game_StageData.h">
+      <Filter>src\scene\step_02_flipflip\game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
