--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -879,6 +879,9 @@
     <ClCompile Include="..\Classes\step_flipflip_game_StageData.cpp">
       <Filter>src\scene\step_02_flipflip\game</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_flipflip_game_TitleScene.cpp">
+      <Filter>src\scene\step_02_flipflip\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1584,6 +1587,9 @@
       <Filter>src\scene\step_02_flipflip\game_test</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_flipflip_game_StageData.h">
+      <Filter>src\scene\step_02_flipflip\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_flipflip_game_TitleScene.h">
       <Filter>src\scene\step_02_flipflip\game</Filter>
     </ClInclude>
   </ItemGroup>
