--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -199,6 +199,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_flipflip_game_CardSelectorNode.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_CardViewNode.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_Constant.cpp" />
+    <ClCompile Include="..\Classes\step_flipflip_game_PlayScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_StageData.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_StageViewNode.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_test_CardSelectorNodeScene.cpp" />
@@ -429,6 +430,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_flipflip_game_CardSelectorNode.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_CardViewNode.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_Constant.h" />
+    <ClInclude Include="..\Classes\step_flipflip_game_PlayScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_StageData.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_StageViewNode.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_test_CardSelectorNodeScene.h" />
