--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -199,11 +199,13 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_flipflip_game_CardSelectorNode.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_CardViewNode.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_Constant.cpp" />
+    <ClCompile Include="..\Classes\step_flipflip_game_MessageViewNode.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_PlayScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_StageData.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_StageViewNode.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_test_CardSelectorNodeScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_test_CardViewScene.cpp" />
+    <ClCompile Include="..\Classes\step_flipflip_game_test_MessageViewNodeScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_test_SelectAndFlipScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_test_StageViewScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_TitleScene.cpp" />
@@ -430,11 +432,13 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_flipflip_game_CardSelectorNode.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_CardViewNode.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_Constant.h" />
+    <ClInclude Include="..\Classes\step_flipflip_game_MessageViewNode.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_PlayScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_StageData.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_StageViewNode.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_test_CardSelectorNodeScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_test_CardViewScene.h" />
+    <ClInclude Include="..\Classes\step_flipflip_game_test_MessageViewNodeScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_test_SelectAndFlipScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_test_StageViewScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_TitleScene.h" />
