--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -178,6 +178,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\shader_practice_RootScene.cpp" />
     <ClCompile Include="..\Classes\shader_practice_SimpleTestScene.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_Block.cpp" />
+    <ClCompile Include="..\Classes\step_clickclick_game_Constant.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_EffectView.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_BlockViewNode.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_Processor.cpp" />
